--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules*
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+bundle.js
+npm-debug.log
+.DS_Store*
+
+**/.sass-cache
+**/Thumbs.ds
+
+.tmp
+dist
