--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,6 @@
   "rules": {
     "import/no-extraneous-dependencies": 0,
     "react/jsx-one-expression-per-line": 0,
-    "react/prop-types": 0,
-    "semi" : 0
+    "react/prop-types": 0
   }
 }
